fix(adaptive-extension): use proper constructor for instantiation
- Replaced deprecated `newInstance()` with `getDeclaredConstructor().newInstance()`
- Ensures compatibility with newer Java versions and improved safety